[package]
name = "rust"
version = "0.1.0"
authors = ["Kazumasa Hirata <p.m.byzance0817@gmail.com>"]
edition = "2018"

[[bin]]
name = "array"
path = "src/array.rs"

[[bin]]
name = "assert"
path = "src/assert.rs"

[[bin]]
name = "block_and_scope"
path = "src/block_and_scope.rs"

[[bin]]
name = "count_753_num"
path = "src/count_753_num.rs"

[[bin]]
name = "for"
path = "src/for.rs"

[[bin]]
name = "if"
path = "src/if.rs"

[[bin]]
name = "literal"
path = "src/literal.rs"

[[bin]]
name = "loop"
path = "src/loop.rs"

[[bin]]
name = "mutable_reference"
path = "src/mutable_reference.rs"

[[bin]]
name = "mutable_variable"
path = "src/mutable_variable.rs"

[[bin]]
name = "partial_sum"
path = "src/partial_sum.rs"

[[bin]]
name = "pattern_match"
path = "src/pattern_match.rs"

[[bin]]
name = "proconio"
path = "src/proconio.rs"

[[bin]]
name = "recursion_sum"
path = "src/recursion_sum.rs"

[[bin]]
name = "reference"
path = "src/reference.rs"

[[bin]]
name = "slice"
path = "src/slice.rs"

[[bin]]
name = "strfmt"
path = "src/strfmt.rs"

[[bin]]
name = "tribonacci"
path = "src/tribonacci.rs"

[[bin]]
name = "tuple"
path = "src/tuple.rs"

[[bin]]
name = "vector"
path = "src/vector.rs"

[dependencies]
#num = "=0.2.1"
#num-bigint = "=0.2.6"
#num-complex = "=0.2.4"
#num-integer = "=0.1.42"
#num-iter = "=0.1.40"
#num-rational = "=0.2.4"
#num-traits = "=0.2.11"

#num-derive = "=0.3.0"

#ndarray = "=0.13.0"

#nalgebra = "=0.20.0"

#alga = "=0.9.3"

#libm = "=0.2.1"

#rand = { version = "=0.7.3", features = ["small_rng"] }
#getrandom = "=0.1.14"
#rand_chacha = "=0.2.2"
#rand_core = "=0.5.1"
#rand_hc = "=0.2.0"
#rand_pcg = "=0.2.1"

#rand_distr = "=0.2.2"

#petgraph = "=0.5.0"

#indexmap = "=1.3.2"

#regex = "=1.3.6"

#lazy_static = "=1.4.0"

#ordered-float = "=1.0.2"

#ascii = "=1.0.0"

#permutohedron = "=0.2.4"

#superslice = "=1.0.0"

#itertools = "=0.9.0"

#itertools-num = "=0.1.3"

#maplit = "=1.0.2"

#either = "=1.5.3"

#im-rc = "=14.3.0"

#fixedbitset = "=0.2.0"

#bitset-fixed = "=0.1.0"

proconio = { version = "=0.3.6", features = ["derive"] }

#text_io = "=0.1.8"

#whiteread = "=0.5.0"

#rustc-hash = "=1.1.0"

#smallvec = "=1.2.0"
